# termchar-demo

./: LICENSE  README.md  pyproject.toml
src/termchar_demo/: advanced_demo.py  app.py  app.tcss  arrows.py  background.md  basic_demo.py  buffer.py  devices.py  intro.md  serve.py
