[tool.poetry]
name = "termchar-demo"
version = "0.1.0"
description = ""
authors = ["David Fokkema <davidfokkema@icloud.com>"]
readme = "README.md"
packages = [{ include = "termchar_demo", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.71.0"

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"
ruff = "^0.5.1"

[tool.poetry.scripts]
tcdemo = "termchar_demo.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
