[tool.poetry]
name = "termchar-demo"
version = "0.3.0.post2"
description = "Termination character demo, a playground to learn about serial communication."
authors = ["David Fokkema <davidfokkema@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "termchar_demo", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.81.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
textual-dev = "^1.6.1"

[tool.poetry.scripts]
tcdemo = "termchar_demo.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
